Identify the "application/vnd.rar" MIME type in order to allow some operations

In order to solve [Users are not able to browse rar files using Return (although it works for 7z, zip files, etc.)](https://bugs.kde.org/show_bug.cgi?id=411330), the Internet Media Type "application/vnd.rar" is recognized in `KrArcBaseManager::getShortTypeFromMime(const QString &mime)`.

ADDITIONAL INFORMATION

In <https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types/Complete_list_of_MIME_types> the type of rar files is "application/x-rar-compressed", but in the aforementioned page it's also declared that
    IANA is the official registry of MIME media types and maintains a [list of all the official MIME types](http://www.iana.org/assignments/media-types/media-types.xhtml)
and precisely in that place what it's stated is "application/vnd.rar", with a link to
    https://www.iana.org/assignments/media-types/application/vnd.rar
where it's written
    1. Deprecated alias names for this type: application/x-rar-compressed

Note: "application/vnd.rar" is already used in Krusader, in `KrServices::generateKrarcArchiveMimetypes()`.

The text "application/x-rar;application/x-rar-compressed;application/vnd.rar" can be searched in https://github.com/lxde/libfm/blob/master/data/archivers.list

In Kubuntu 18.04 I executed:
    $ xdg-mime query default application/x-rar
    org.kde.ark.desktop
    $ xdg-mime query default application/x-rar-compressed
    org.kde.ark.desktop
    $ xdg-mime query default application/vnd.rar
    org.kde.ark.desktop
    $ xdg-mime query default application/vnd.JUST_TO_CHECK_THAT_IT_CAN_FAIL; echo $?
    4

Several people had a similar problem when using other programs (https://bbs.archlinux.org/viewtopic.php?pid=1748314#p1748314 , https://github.com/webmin/webmin/issues/702#issue-276713752).

FIXED: [ 411330 ] Users are not able to browse rar files using Return (although it works for 7z, zip files, etc.)
BUG: 411330

Differential Revision: https://phabricator.kde.org/D23476